<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="ko">

    <string name="hello">Hello World, Nursing!</string>
    <string name="app_name">mEMR</string>
    <string name="login_dialog_title">사용자인증</string>
    <string name="login_userid">사용자ID</string>
    <string name="login_password">비밀번호</string>

    <!-- 메인메뉴의 버튼 즉,화면명 -->

    <string name="register">등록</string>
    <string name="home">홈</string>
    <string name="notice">공지사항</string>
    <string name="notice_detail">공지사항 내용</string>
    <string name="inpatient_list">재원환자명단</string>
    <string name="qr_scan">QR코드읽기</string>
    <string name="logoff">로그오프</string>
    <string name="set_config">환경설정</string>
    <string name="my_static_tab">Static Tab Test</string>
    <string name="my_dynamic_tab">Dynamic Tab Test</string>
    <string name="my_view_flipper">Flip Test</string>
    <string name="my_tab3">My Tab3</string>

    <!-- 재원환자명단에서 사용하는 메뉴 -->
    <string name="order">처방조회</string>
    <string name="result_lis">진단검사결과</string>
    <string name="result_rad">영상진단결과</string>
    <string name="result_q">기능검사결과</string>
    <string name="certificate_list">동의서목록</string>
    <string name="certificate_paper">동의서</string>
    <string name="tpr">TPR조회</string>
    <string name="tpr_enter">TPR등록</string>
    <string name="emr_scan">기타서식조회</string>
    <string name="emr_scan_view">기타서식</string>
    <string name="patient_hos_hx">입내원이력</string>
    <string name="exit">종료</string>
    <string name="ok">확인</string>
    <string name="sort">정렬</string>
    <string name="option">옵션</string>
    <string name="apply">적용</string>
    <string name="cancel">취소</string>
    <string name="query">조회</string>
    <string name="enter">등록</string>
    <string name="menu">메뉴</string>
    <string name="config">설정</string>
    <string name="rotate_right">회전→</string>
    <string name="rotate_left">←회전</string>
    <string name="slash">/</string>
    <string name="date">일자</string>
    <string name="time">시간</string>
    <string name="temp">체온</string>
    <string name="bp">혈압</string>
    <string name="pulse">맥박</string>
    <string name="breath">호흡</string>
    <string name="defaultvalue">기본</string>
    <string name="midnight">자정</string>
    <string name="dawn">새벽</string>
    <string name="login">로그인</string>
    <string name="dunit">단위</string>
    <string name="ocd">처방코드</string>
    <string name="onm">처방명</string>
    <string name="pnm">환자명</string>
    <string name="ward">병동</string>
    <string name="dept_pnm">진료과+환자명</string>
    <string name="bed_in_date_time">입원일시↓</string>
    <string name="exit_dialog_title">종료확인</string>
    <string name="exit_dialog_message">종료하시겠습니까?</string>
    <string name="no_data_message">해당 조건의 자료가 없습니다.</string>
    <string name="no_data_input_message">입력된 자료가 없습니다.</string>
    <string name="requery">다시조회</string>
    <string name="select_color">색상선택</string>
    <string name="cancel_message">취소되었습니다.</string>
    <string name="register_dialog_title">등록</string>
    <string name="register_message">등록되지 않은 장치입니다. 인증키를  입력하여 등록하십시요.</string>
    <string name="process_wait_message">처리 중입니다. 잠시 기다려주세요</string>
    <string name="query_wait_message">조회 중입니다. 잠시 기다려주세요</string>
    <string name="query_count_message">건이 조회되었습니다.</string>
    <string name="splash_message">시작하고 있습니다.</string>
    <string name="exit_confirm_message">뒤로가기를 한 번 더 누르면 프로그램이 종료됩니다.</string>
    <string name="close_confirm_message">뒤로가기를 한 번 더 누르면 화면이 닫힙니다.</string>
    <string name="no_wifi_address_message">WIFI(무선랜)를 키고 다시 실행하세요.</string>
    <string name="network_connection_close_message">네트워크가 끊어졌습니다. 네트워크상태를 확인하세요.</string>
    <string name="save_success">저장이 성공적으로 완료되었습니다.</string>

    <!-- 임시저장대상자조회 화면에서 사용하는 정렬 순서 -->
    <string name="pnm_exdt">환자명+일자↓</string>
    <string name="exdt_pnm">일자↓+환자명</string>
    <string name="form_pnm">동의서명+환자명</string>

    <!-- 환경설정 -->
    <string name="first_in_patient_list">실행시 재원환자를 조회합니다.</string>
    <string name="backbutton_disabled">뒤로가기 버튼 막기</string>
    <string name="go_patch_metrosoft">최신 버전 업데이트 하기(Metrosoft)</string>
    <string name="go_patch_google">최신 버전 업데이트 하기</string>
    <string name="current_version">현재 버전</string>
    <string name="latest_version">최신 버전</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
