<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dip"
    android:background="#ffffff"
    >
	<RadioGroup
	    android:id="@+id/rg_sort"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:checkedButton="@+id/rb_sort_pnm" 
	    >
	<RadioButton
	    android:id="@id/rb_sort_pnm"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:textColor="#000000"
	    android:text="@string/pnm"
	    />
	<RadioButton
	    android:id="@+id/rb_sort_ward"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:textColor="#000000"
	    android:text="@string/ward"
	    />
	<RadioButton
	    android:id="@+id/rb_sort_dept"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:textColor="#000000"
	    android:text="@string/dept_pnm"
	    />
	</RadioGroup>
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="45dip"
	    >
		<Button
			android:id="@+id/apply_button"
		    android:layout_width="wrap_content" 
		    android:layout_height="fill_parent" 
		    android:text="@string/apply"
		    android:background="@drawable/selector_button_background"
		    android:layout_weight="1"
		    />
		<Button
			android:id="@+id/cancel_button"
		    android:layout_width="wrap_content" 
		    android:layout_height="fill_parent" 
		    android:text="@string/cancel"
            android:background="@drawable/selector_button_background"
		    android:layout_weight="1"
		    />
    </LinearLayout>
</LinearLayout>