<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="200dip"
    android:minHeight="250dip"
    android:background="@color/background"
    >
    <!-- 타이틀 부분임. -->
    <include layout="@layout/custom_dialog_title_bar"></include>
    <!-- 본문부분임 -->
	<RadioGroup
	    android:id="@+id/colorRadioGroup"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="20dip"
	    >
		<RadioButton
		    android:id="@+id/defaultColorRadio"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:textColor="@color/foreground"
		    android:text="@string/defaultvalue"
		    android:paddingBottom="10dip"
		    />
		<RadioButton
		    android:id="@+id/midnightColorRadio"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:textColor="@color/foreground"
		    android:text="@string/midnight"
            android:paddingBottom="10dip"
		    />
		<RadioButton
		    android:id="@+id/dawnColorRadio"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:textColor="@color/foreground"
		    android:text="@string/dawn"
            android:paddingBottom="5dip"
		    />
	</RadioGroup>
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
		<Button
			android:id="@+id/color_apply_button"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/apply"
		    android:layout_weight="2"
		    />
		<Button
			android:id="@+id/color_cancel_button"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/cancel"
		    android:layout_weight="1"
		    />
    </LinearLayout>
</LinearLayout>