<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background"
    >
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginLeft="5dip"
	    android:layout_marginTop="5dip"
	    android:layout_marginRight="5dip"
	    android:layout_marginBottom="25dip"
	    android:orientation="vertical"
	    >
	    <!-- 제목 -->
        <TextView android:text="버전 관리"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:gravity="center"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/titleforeground"
            android:background="@color/temr_titlebackground"
            />
        <!-- 현재버전 -->
	    <TextView android:text="@string/current_version"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="15dip"
	        android:textColor="@color/foreground"
	        />
	    <!-- 현재버전 자료 -->
	    <TextView android:id="@+id/current_version_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:textColor="@color/foreground"
	        android:textSize="@dimen/large_large_text_size"
	        />
	    <!-- 최신버전 -->
	    <TextView android:text="@string/latest_version"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="15dip"
	        android:textColor="@color/foreground"
	        />
	    <!-- 최신버전 자료 -->
	    <TextView android:id="@+id/latest_version_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:textColor="@color/foreground"
	        android:textSize="@dimen/large_large_text_size"
	        />
	    <!-- 버튼 -->
	    <Button android:id="@+id/go_patch_google_button"
	        android:layout_width="250dip"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/go_patch_google" 
	    />
	    <Button android:id="@+id/go_patch_metrosoft_button"
	        android:layout_width="250dip"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/go_patch_metrosoft" 
	    />
	</LinearLayout>
</LinearLayout>