<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="330dip"
    android:layout_height="fill_parent"
    android:background="@drawable/tpr_enter_background"
    >
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        >
        <!-- TPR등록 제목 -->
        <TextView 
            android:textColor="@color/titleforeground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tpr_enter"
            android:textSize="30dip"
            android:gravity="center"
            android:paddingLeft="5dip"
            android:paddingBottom="5dip"
            android:background="@color/temr_titlebackground"
            />
        <!-- 본문 -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="20dip"
            android:layout_marginRight="10dip"
            android:layout_marginBottom="10dip"
            >
	        <LinearLayout 
	            android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dip"
	            >
	            <!-- 일자.제목 -->
	            <TextView 
	                android:textColor="@color/foreground"
	                android:textSize="@dimen/large_text_size"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/date"
	                android:textStyle="bold"
	                android:paddingRight="10dip"
	                />
	            <!-- 일자.자료 -->
	            <Button 
	                android:id="@+id/chkDate"
	                android:textSize="@dimen/large_text_size"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:paddingTop="5dip"
	                android:paddingBottom="5dip"
	                android:paddingLeft="14dip"
	                android:paddingRight="14dip"
	                android:background="@drawable/selector_button_background"
	                android:text=""/>
	            <!-- 시간.자료 -->
	            <Button 
	                android:id="@+id/chkTime"
	                android:textSize="@dimen/large_text_size"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:paddingTop="5dip"
	                android:paddingBottom="5dip"
	                android:paddingLeft="14dip"
	                android:paddingRight="14dip"
	                android:background="@drawable/selector_button_background"
	                android:text=""/>
	        </LinearLayout>
	        <LinearLayout 
	            android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            >
	            <!-- 체온.제목 -->
	            <TextView 
	                android:textColor="@color/foreground"
	                android:textSize="@dimen/large_text_size"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/temp"
	                android:textStyle="bold"
	                android:paddingRight="10dip"
	                />
	            <!-- 체온.자료 -->
	            <EditText 
	                android:id="@+id/tempEditText"
	                android:textSize="@dimen/large_text_size"
	                android:inputType="numberDecimal"
	                android:layout_width="70dip"
	                android:layout_height="wrap_content"
	                android:text=""/>
	        </LinearLayout>
	        <LinearLayout 
	            android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            >
	            <!-- 맥박.제목 -->
	            <TextView 
	                android:textColor="@color/foreground"
	                android:textSize="@dimen/large_text_size"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/pulse"
	                android:textStyle="bold"
	                android:paddingRight="10dip"
	                />
	            <!-- 맥발.자료 -->
	            <EditText 
	                android:id="@+id/pulseEditText"
	                android:textSize="@dimen/large_text_size"
	                android:inputType="numberDecimal"
	                android:layout_width="70dip"
	                android:layout_height="wrap_content"
	                android:text=""/>
	        </LinearLayout>
	        <LinearLayout 
	            android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            >
	            <!-- 혈압.제목 -->
	            <TextView
	                android:textColor="@color/foreground" 
	                android:textSize="@dimen/large_text_size"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/bp"
	                android:textStyle="bold"
	                android:paddingRight="10dip"
	                />
	            <!-- 혈압.자료 -->
	            <EditText 
	                android:id="@+id/bpMaxEditText"
	                android:textSize="@dimen/large_text_size"
	                android:inputType="numberDecimal"
	                android:layout_width="70dip"
	                android:layout_height="wrap_content"
	                android:nextFocusDown="@+id/bpMinEditText"
	                android:text=""/>
	            <!-- 혈압./ -->
	            <TextView 
	                android:textColor="@color/foreground"
	                android:textSize="@dimen/large_text_size"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/slash"/>
	            <!-- 혈압.자료 -->
	            <EditText 
	                android:id="@+id/bpMinEditText"
	                android:textSize="@dimen/large_text_size"
	                android:inputType="numberDecimal"
	                android:layout_width="60dip"
	                android:layout_height="wrap_content"
	                android:text=""/>
	        </LinearLayout>
	        <LinearLayout 
	            android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            >
	            <!-- 호흡.제목 -->
	            <TextView 
	                android:textColor="@color/foreground"
	                android:textSize="@dimen/large_text_size"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/breath"
	                android:textStyle="bold"
	                android:paddingRight="10dip"
	                />
	            <!-- 호흡.자료 -->
	            <EditText 
	                android:id="@+id/breathEditText"
	                android:textSize="@dimen/large_text_size"
	                android:inputType="numberDecimal"
	                android:layout_width="70dip"
	                android:layout_height="wrap_content"
	                android:text=""/>
	        </LinearLayout>
	        <LinearLayout 
	            android:orientation="horizontal"
	            android:layout_width="300dip" 
	            android:layout_height="37dip"
	            android:layout_marginTop="20dip" 
	            >
	            <Button
	                android:id="@+id/okButton"
	                android:text="@string/ok"
	                android:textSize="@dimen/normal_text_size"
	                android:layout_width="wrap_content"
	                android:layout_height="fill_parent"
	                android:background="@drawable/selector_button_background"
	                android:layout_weight="2"
	                />
	            <Button
	                android:id="@+id/cancelButton"
	                android:text="@string/cancel"
	                android:textSize="@dimen/normal_text_size"
	                android:layout_width="wrap_content"
	                android:layout_height="fill_parent"
	                android:background="@drawable/selector_button_background"
	                android:layout_weight="1" 
	                />
	        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
