<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="4dip"
    android:paddingBottom="6dip"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:orientation="horizontal"
    android:background="@drawable/shape_listview_row"
    >
    <!-- ocd -->
    <TextView
        android:textColor="@color/foreground"
        android:textSize="@dimen/normal_text_size"
        android:paddingLeft="5dip"
        android:layout_width="@dimen/med_record_ocd_row_width"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/ocd"
         />
    <!-- onm -->
    <TextView
        android:textColor="@color/foreground"
        android:textSize="@dimen/normal_text_size"
        android:layout_width="@dimen/med_record_onm_row_width"
        android:layout_height="wrap_content"
        android:text="@string/onm"
         />
    <!-- dunit -->
    <TextView
        android:textColor="@color/foreground"
        android:textSize="@dimen/normal_text_size"
        android:layout_width="@dimen/med_record_dunit_row_width"
        android:layout_height="wrap_content"
        android:text="@string/dunit"
         />
    <TextView
        android:id="@+id/ordcnt0_column_header"
        android:textColor="@color/foreground"
        android:textSize="@dimen/small_text_size"
        android:background="@color/oddcolumn"
        android:layout_width="@dimen/med_record_ordcnt_row_width"
        android:gravity="center"
        android:layout_height="wrap_content"
         />
    <TextView
        android:id="@+id/ordcnt1_column_header"
        android:textColor="@color/foreground"
        android:textSize="@dimen/small_text_size"
        android:layout_width="@dimen/med_record_ordcnt_row_width"
        android:gravity="center"
        android:layout_height="wrap_content"
         />
    <TextView
        android:id="@+id/ordcnt2_column_header"
        android:textColor="@color/foreground"
        android:textSize="@dimen/small_text_size"
        android:background="@color/oddcolumn"
        android:layout_width="@dimen/med_record_ordcnt_row_width"
        android:gravity="center"
        android:layout_height="wrap_content"
         />
    <TextView
        android:id="@+id/ordcnt3_column_header"
        android:textColor="@color/foreground"
        android:textSize="@dimen/small_text_size"
        android:layout_width="@dimen/med_record_ordcnt_row_width"
        android:gravity="center"
        android:layout_height="wrap_content"
         />
    <TextView
        android:id="@+id/ordcnt4_column_header"
        android:textColor="@color/foreground"
        android:textSize="@dimen/small_text_size"
        android:background="@color/oddcolumn"
        android:layout_width="@dimen/med_record_ordcnt_row_width"
        android:gravity="center"
        android:layout_height="wrap_content"
         />
    <TextView
        android:id="@+id/ordcnt5_column_header"
        android:textColor="@color/foreground"
        android:textSize="@dimen/small_text_size"
        android:layout_width="@dimen/med_record_ordcnt_row_width"
        android:gravity="center"
        android:layout_height="wrap_content"
         />
    <TextView
        android:id="@+id/ordcnt6_column_header"
        android:textColor="@color/foreground"
        android:textSize="@dimen/small_text_size"
        android:background="@color/oddcolumn"
        android:layout_width="@dimen/med_record_ordcnt_row_width"
        android:gravity="center"
        android:layout_height="wrap_content"
         />
    <TextView
        android:id="@+id/ordcnt7_column_header"
        android:textColor="@color/foreground"
        android:textSize="@dimen/small_text_size"
        android:layout_width="@dimen/med_record_ordcnt_row_width"
        android:gravity="center"
        android:layout_height="wrap_content"
         />
    <TextView
        android:id="@+id/ordcnt8_column_header"
        android:textColor="@color/foreground"
        android:textSize="@dimen/small_text_size"
        android:background="@color/oddcolumn"
        android:layout_width="@dimen/med_record_ordcnt_row_width"
        android:gravity="center"
        android:layout_height="wrap_content"
         />
<!--     <TextView -->
<!--         android:id="@+id/ordcnt9_column_header" -->
<!--         android:textColor="@color/foreground" -->
<!--         android:textSize="@dimen/small_text_size" -->
<!--         android:layout_width="45dip" -->
<!--         android:paddingLeft="5dip" -->
<!--         android:gravity="center" -->
<!--         android:layout_height="wrap_content" -->
<!--          /> -->
<!--     <TextView -->
<!--         android:id="@+id/ordcnt10_column_header" -->
<!--         android:textColor="@color/foreground" -->
<!--         android:textSize="@dimen/small_text_size" -->
<!--         android:background="@color/oddcolumn" -->
<!--         android:layout_width="45dip" -->
<!--         android:paddingLeft="5dip" -->
<!--         android:gravity="center" -->
<!--         android:layout_height="wrap_content" -->
<!--          /> -->
<!--     <TextView -->
<!--         android:id="@+id/ordcnt11_column_header" -->
<!--         android:textColor="@color/foreground" -->
<!--         android:textSize="@dimen/small_text_size" -->
<!--         android:layout_width="45dip" -->
<!--         android:paddingLeft="5dip" -->
<!--         android:gravity="center" -->
<!--         android:layout_height="wrap_content" -->
<!--          /> -->
</LinearLayout>